--- a/index.html
+++ b/index.html
@@ -7,10 +7,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <!-- Preload hero image for faster loading -->
-    <link rel="preload" as="image" href="https://i.postimg.cc/tCpgKwrq/Gemini-Generated-Image-o1hjz5o1hjz5o1hj.png">
-    <!-- Preload about section image -->
-    <link rel="preload" as="image" href="https://i.postimg.cc/d1cys1Nk/new-dp.jpg">
     <!-- EmailJS SDK -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script type="text/javascript">
@@ -555,6 +551,7 @@
             box-shadow: 0 25px 70px rgba(0,0,0,0.15);
             border: 10px solid white;
             transition: transform 0.4s ease, box-shadow 0.4s ease;
+            background: linear-gradient(135deg, #FFD43B 0%, #ffc107 100%);
         }
 
         .image-circle::before {
@@ -587,6 +584,12 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            opacity: 0;
+            transition: opacity 0.5s ease-in;
+        }
+
+        .image-circle img.loaded {
+            opacity: 1;
         }
 
         .yellow-wave {
@@ -1664,7 +1667,7 @@
         <div class="home-image">
             <div class="image-wrapper">
                 <div class="image-circle">
-                    <img src="https://i.postimg.cc/tCpgKwrq/Gemini-Generated-Image-o1hjz5o1hjz5o1hj.png" 
+                    <img src="Gemini_Generated_heroimage.png" 
                          alt="Samitesh Panda"
                          loading="eager"
                          fetchpriority="high"
@@ -1679,7 +1682,7 @@
     <section id="about">
         <div class="about-image animate-on-scroll image-pop">
             <div class="image-circle">
-                <img src="https://i.postimg.cc/d1cys1Nk/new-dp.jpg" 
+                <img src="about-image.jpg" 
                      alt="About Samitesh"
                      loading="eager"
                      fetchpriority="high"
@@ -1802,13 +1805,13 @@
         <div class="cert-page-content">
             <div class="cert-grid">
                 <div class="cert-card">
-                    <div class="cert-card-image" onclick="openCertModal('https://i.postimg.cc/KvJ0FRTP/Screenshot-2025-10-02-121339.png')">
-                        <img src="https://i.postimg.cc/KvJ0FRTP/Screenshot-2025-10-02-121339.png" alt="Learning GEN-AI Certificate">
+                    <div class="cert-card-image" onclick="openCertModal('./certificate-genai.png')">
+                        <img src="certificate-genai.png" alt="Learning GEN-AI Certificate">
                     </div>
                     <h3>Learning Generative AI</h3>
                     <span class="cert-card-status status-completed">✓ Completed</span>
                     <p>Successfully completed the Generative AI fundamentals course, covering key concepts in AI model training, prompt engineering, and practical applications.</p>
-                    <button class="view-cert-btn" onclick="openCertModal('https://i.postimg.cc/KvJ0FRTP/Screenshot-2025-10-02-121339.png')">
+                    <button class="view-cert-btn" onclick="openCertModal('./certificate-genai.png')">
                         View Certificate
                         <svg width="16" height="16" fill="currentColor" viewBox="0 0 24 24">
                             <path d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"/>
@@ -2064,6 +2067,19 @@
                     window.scrollTo({
                         top: target.offsetTop - 80,
                         behavior: 'smooth'
+                    });
+                }
+            });
+        });
+
+        // Image Loading Handler
+        window.addEventListener('load', () => {
+            document.querySelectorAll('.image-circle img').forEach(img => {
+                if (img.complete) {
+                    img.classList.add('loaded');
+                } else {
+                    img.addEventListener('load', () => {
+                        img.classList.add('loaded');
                     });
                 }
             });
