New project added - Flow optimiser

--- a/index.html
+++ b/index.html
@@ -1228,7 +1228,7 @@
 
         .projects-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(480px, 1fr));
+            grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
             gap: 2.5rem;
         }
 
@@ -1667,7 +1667,7 @@
         <div class="home-image">
             <div class="image-wrapper">
                 <div class="image-circle">
-                    <img src="Gemini_Generated_heroimage.png" 
+                    <img src="./Gemini_Generated_heroimage.png" 
                          alt="Samitesh Panda"
                          loading="eager"
                          fetchpriority="high"
@@ -1682,7 +1682,7 @@
     <section id="about">
         <div class="about-image animate-on-scroll image-pop">
             <div class="image-circle">
-                <img src="about-image.jpg" 
+                <img src="./about-image.jpg" 
                      alt="About Samitesh"
                      loading="eager"
                      fetchpriority="high"
@@ -1806,7 +1806,7 @@
             <div class="cert-grid">
                 <div class="cert-card">
                     <div class="cert-card-image" onclick="openCertModal('./certificate-genai.png')">
-                        <img src="certificate-genai.png" alt="Learning GEN-AI Certificate">
+                        <img src="./certificate-genai.png" alt="Learning GEN-AI Certificate">
                     </div>
                     <h3>Learning Generative AI</h3>
                     <span class="cert-card-status status-completed">✓ Completed</span>
@@ -1859,6 +1859,13 @@
         <div class="projects-container">
             <h2 class="animate-on-scroll">Projects</h2>
             <div class="projects-grid">
+                <div class="project-card animate-on-scroll">
+                    <h3>Cash Flow Optimiser</h3>
+                    <p class="project-affiliation">FinTech Application | DSA Optimization</p>
+                    <p>This FinTech-style web application solves the complex multi-party debt settlement problem by implementing the Greedy Cash Flow Minimization Algorithm. The system rigorously calculates the absolute minimum number of transactions required to settle all outstanding debts, demonstrating strong proficiency in Data Structures and Algorithms (DSA) and optimization. The application features a professional, high-contrast dark theme, an instantaneous Past Payments History update, and incorporates a simulated FX Risk Heatmap for cross-border transactions to enhance its real-world analytical utility.</p>
+                    <a href="https://flowoptimser.netlify.app/" target="_blank" class="btn btn-primary">View Live Demo</a>
+                </div>
+
                 <div class="project-card animate-on-scroll">
                     <h3>Crowd-Sourced Civic Issue Resolution System</h3>
                     <p class="project-affiliation">Team: Prompt Ninjas | Smart India Hackathon</p>
