new project added : Circulab

--- a/index.html
+++ b/index.html
@@ -1862,8 +1862,15 @@
                 <div class="project-card animate-on-scroll">
                     <h3>Cash Flow Optimiser</h3>
                     <p class="project-affiliation">FinTech Application | DSA Optimization</p>
-                    <p>This FinTech-style web application solves the complex multi-party debt settlement problem by implementing the Greedy Cash Flow Minimization Algorithm. The system rigorously calculates the absolute minimum number of transactions required to settle all outstanding debts, demonstrating strong proficiency in Data Structures and Algorithms (DSA) and optimization. The application features a professional, high-contrast dark theme, an instantaneous Past Payments History update, and incorporates a simulated FX Risk Heatmap for cross-border transactions to enhance its real-world analytical utility.</p>
+                    <p>Cash Flow Optimiser is a FinTech web app that solves the complex multi-party debt settlement problem by implementing the Greedy Cash Flow Minimization Algorithm, calculating the absolute minimum number of transactions required to settle all outstanding debts.</p>
                     <a href="https://flowoptimser.netlify.app/" target="_blank" class="btn btn-primary">View Live Demo</a>
+                </div>
+
+                <div class="project-card animate-on-scroll">
+                    <h3>CircuLab - Digital AI based logical circuit designer</h3>
+                    <p class="project-affiliation">AI-Powered Circuit Simulator</p>
+                    <p>CircuLab is a unique, single-file web simulator featuring a Proteus-grade canvas with functional Undo/Redo and 90° wiring. Its innovation lies in the AI core, which performs Quine-McCluskey optimization and supports Text-to-Circuit generation from natural language prompts.</p>
+                    <a href="https://circu-lab-ai-based-logic-gate-simul.vercel.app/" target="_blank" class="btn btn-primary">View Live Demo</a>
                 </div>
 
                 <div class="project-card animate-on-scroll">
